remove docker.io installations

--- a/.github/actions/kyma-setup/action.yaml
+++ b/.github/actions/kyma-setup/action.yaml
@@ -38,7 +38,7 @@ runs:
       run: |
         set -e
         sudo apt-get update -y
-        sudo apt-get install -y software-properties-common curl ca-certificates sudo make maven docker.io
+        sudo apt-get install -y software-properties-common curl ca-certificates sudo make
         curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key \
           | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
         echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.29/deb/ /' \
