--- a/.github/actions/kyma-setup/action.yaml
+++ b/.github/actions/kyma-setup/action.yaml
@@ -39,10 +39,13 @@ runs:
         set -e
         sudo apt-get update -y
         sudo apt-get install -y software-properties-common curl ca-certificates sudo make
+
         curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key \
-          | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+          | sudo gpg --no-tty --batch --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+
         echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.29/deb/ /' \
           | sudo tee /etc/apt/sources.list.d/kubernetes.list
+
         sudo apt-get update -y
         sudo apt-get install -y kubectl
         curl -fsSL https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
