add code for headless browsers

--- a/.github/workflows/kyma.yaml
+++ b/.github/workflows/kyma.yaml
@@ -43,7 +43,13 @@ jobs:
           unzip kubelogin.zip -d /usr/local/bin
           chmod +x /usr/local/bin/kubelogin
           ln -s /usr/local/bin/kubelogin /usr/local/bin/kubectl-oidc_login
-          
+      
+      - name: Prepare kubeconfig for CI
+        shell: bash
+        run: |
+          export KUBECONFIG=${HOME}/.kube/config
+          kubelogin convert-kubeconfig -l spn
+
       - run: npx cds up --to k8s
 
       - uses: ./.github/actions/kyma-info
